force-app/main/default/objects/SupplierInvoice__c/SupplierInvoice__c.object-meta.xml
<CustomObject>
    <label>Supplier Invoice</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Supplier Invoice Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>