force-app/main/default/objects/SupplierInvoice__c/fields/AbacusDocumentNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusDocumentNr__c</fullName>
    <externalId>true</externalId>
    <label>Abacus Document Nr.</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>