force-app/main/default/objects/SupplierInvoice__c/fields/AbacusSupplierInvoiceTotal__c.field-meta.xml
<CustomField>
    <fullName>AbacusSupplierInvoiceTotal__c</fullName>
    <label>Abacus Supplier Invoice - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>