force-app/main/default/objects/SupplierInvoice__c/fields/AbacusSupplierInvoiceTotalCHF__c.field-meta.xml
<CustomField>
    <fullName>AbacusSupplierInvoiceTotalCHF__c</fullName>
    <label>Abacus Supplier Invoice - Total (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>