force-app/main/default/objects/SupplierInvoice__c/fields/BillerAccount__c.field-meta.xml
<CustomField>
    <fullName>BillerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Invoices</relationshipLabel>
    <relationshipName>SupplierInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>