force-app/main/default/objects/SupplierInvoice__c/fields/CostsSupplierCostsGross__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsGross__c</fullName>
    <label>Costs - Supplier Costs Gross</label>
    <summarizedField>SupplierCosts__c.CostsSupplierCostsGross__c</summarizedField>
    <summaryForeignKey>SupplierCosts__c.SupplierInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>