force-app/main/default/objects/SupplierInvoice__c/fields/CostsSupplierCostsGrossCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsGrossCHF__c</fullName>
    <label>Costs - Supplier Costs Gross (CHF)</label>
    <summarizedField>SupplierCosts__c.CostsSupplierCostsGrossCHF__c</summarizedField>
    <summaryForeignKey>SupplierCosts__c.SupplierInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>