force-app/main/default/objects/SupplierInvoice__c/fields/CostsSupplierCostsNet__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsNet__c</fullName>
    <label>Costs - Supplier Costs Net</label>
    <summarizedField>SupplierCosts__c.CostsSupplierCostsNet__c</summarizedField>
    <summaryForeignKey>SupplierCosts__c.SupplierInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>