force-app/main/default/objects/SupplierInvoice__c/fields/CostsSupplierCostsNetCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsNetCHF__c</fullName>
    <label>Costs - Supplier Costs Net (CHF)</label>
    <summarizedField>SupplierCosts__c.CostsSupplierCostsNetCHF__c</summarizedField>
    <summaryForeignKey>SupplierCosts__c.SupplierInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>