force-app/main/default/objects/SupplierInvoice__c/fields/DocumentCode__c.field-meta.xml
<CustomField>
    <fullName>DocumentCode__c</fullName>
    <description>Abacus Belegart. Steuert ob Rechnung oder Gutschrift.</description>
    <label>Document Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>