force-app/main/default/objects/SupplierInvoice__c/fields/LocalCurrency__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrency__c</fullName>
    <label>Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalCurrency</valueSetName>
    </valueSet>
</CustomField>