force-app/main/default/objects/SupplierInvoice__c/fields/OrderNr__c.field-meta.xml
<CustomField>
    <fullName>OrderNr__c</fullName>
    <label>Order Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>