force-app/main/default/objects/SupplierInvoice__c/fields/SupplierCostsDescription__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsDescription__c</fullName>
    <label>Supplier Costs Description</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>