force-app/main/default/objects/SupplierInvoice__c/fields/SupplierInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>SupplierInvoiceDate__c</fullName>
    <label>Supplier Invoice Date</label>
    <type>Date</type>
</CustomField>