force-app/main/default/objects/SupplierInvoice__c/fields/SupplierInvoiceTotal__c.field-meta.xml
<CustomField>
    <fullName>SupplierInvoiceTotal__c</fullName>
    <formula>IF(
LEFT( DocumentCode__c ,1)=&quot;F&quot;,  AbacusSupplierInvoiceTotal__c , AbacusSupplierInvoiceTotal__c*-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Invoice - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>