force-app/main/default/objects/SupplierInvoice__c/fields/SupplierInvoiceTotalCHF__c.field-meta.xml
<CustomField>
    <fullName>SupplierInvoiceTotalCHF__c</fullName>
    <formula>IF(
LEFT( DocumentCode__c ,1)=&quot;F&quot;,  AbacusSupplierInvoiceTotalCHF__c , AbacusSupplierInvoiceTotalCHF__c*-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Invoice - Total (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>