force-app/main/default/objects/SupplierInvoice__c/fields/ValNoDelete__c.field-meta.xml
<CustomField>
    <fullName>ValNoDelete__c</fullName>
    <formula>if(
 ValNoDeleteOverrideSysAdmin__c =false, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValNoDelete</label>
    <type>Checkbox</type>
</CustomField>