force-app/main/default/objects/SupplierInvoice__c/fields/ValNoDeleteOverrideSysAdmin__c.field-meta.xml
<CustomField>
    <fullName>ValNoDeleteOverrideSysAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValNoDeleteOverrideSysAdmin</label>
    <type>Checkbox</type>
</CustomField>