force-app/main/default/objects/SupplierInvoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AbacusDocumentNr__c</columns>
    <columns>AbacusSupplierInvoiceTotal__c</columns>
    <columns>AbacusSupplierInvoiceTotalCHF__c</columns>
    <columns>BillerAccount__c</columns>
    <columns>SupplierCostsDescription__c</columns>
    <columns>Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>