force-app/main/default/objects/SupplierInvoice__c/listViews/Nicht_zuweisbare_Drittkosten.listView-meta.xml
<ListView>
    <fullName>Nicht_zuweisbare_Drittkosten</fullName>
    <columns>NAME</columns>
    <columns>BillerAccount__c</columns>
    <columns>CostsSupplierCostsGross__c</columns>
    <columns>CostsSupplierCostsNet__c</columns>
    <columns>DocumentCode__c</columns>
    <columns>FinanceDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Nicht zuweisbare Drittkosten</label>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>